feat: implement infrastructure multi-level approval system and modernize port/VTS frontend modules